# cookiecutter-default-lib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt
hooks/: __init__.py  git_user_config.py  post_gen_project.sh  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py
