[project]
name = "cookiecutter-default-lib"
version = "0.1.0"
description = "A default library template for Python projects."
readme = "README.md"
authors = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
maintainers = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = []

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["PLR0913", "D203", "D213", "COM812"]

[tool.ty]
src.include = ["src", "tests"]
rules.division-by-zero = "warn"
rules.possibly-unresolved-reference = "warn"
rules.unused-ignore-comment = "warn"

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "prek>=0.3.1",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
