[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
maintainers = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["PLR0913", "D203", "D213", "COM812"]
