[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}" }
]
maintainers = [
    { name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["PLR0913", "D203", "D213", "COM812"]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "recommended"

